--- a/TianyongweiWebsite/src/main/resources/templates/test.html
+++ b/TianyongweiWebsite/src/main/resources/templates/test.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 	<div class="pure-g">
-		<div class="pure-u-2-5">
+		<!-- <div class="pure-u-2-5">
 			<p></p>
-		</div>
-		<div class="pure-u-1-5" style="background-color: ;">
+		</div> -->
+		<div class="pure-u-1-5 offset-pure-u-2-5" style="background-color: ;">
 			<form class="pure-form pure-form-stacked">
 				<fieldset>
-					<legend>Tianyongwei.com admin UI</legend>
+					<legend>admin UI</legend>
 
 					<label for="email">Email</label> <input id="email" type="email"
 						placeholder="Email" /> <span class="pure-form-message">This
