--- a/TianyongweiWebsite/src/main/resources/templates/test.html
+++ b/TianyongweiWebsite/src/main/resources/templates/test.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>layout</title>
-<meta name="viewport"
-	content="width=device-width, initial-scale=1; charset=UTF-8" />
-<link rel="stylesheet"
-	href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" />
+  <title>layout</title>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1; charset=UTF-8"/>
+  <link rel="stylesheet"
+        href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"/>
 </head>
 <body>
-	<div class="pure-g">
-		<!-- <div class="pure-u-2-5">
-			<p></p>
-		</div> -->
-		<div class="pure-u-1-5 offset-pure-u-2-5" style="background-color: ;">
-			<form class="pure-form pure-form-stacked">
-				<fieldset>
-					<legend>admin UI</legend>
+<div class="pure-g">
+  <div class="pure-u-2-5">
+    <p></p>
+  </div>
+  <div class="pure-u-2-5" style="background-color: ;">
+    <form class="pure-form pure-form-aligned">
+      <fieldset>
+        <div class="pure-control-group">
+          <label for="name">Username</label>
+          <input id="name" type="text" placeholder="Username" />
+          <span class="pure-form-message-inline">This is a required field.</span>
+        </div>
 
-					<label for="email">Email</label> <input id="email" type="email"
-						placeholder="Email" /> <span class="pure-form-message">This
-						is a required field.</span> <label for="password">Password</label> <input
-						id="password" type="password" placeholder="Password" /> <label
-						for="remember" class="pure-checkbox"> <input id="remember"
-						type="checkbox" /> Remember me
-					</label>
-
-					<button type="submit" class="pure-button pure-button-primary">Sign
-						in</button>
-				</fieldset>
-			</form>
-		</div>
-		<div class="pure-u-2-5">
-			<p></p>
-		</div>
-	</div>
+        <div class="pure-control-group">
+          <label for="password">Password</label>
+          <input id="password" type="password" placeholder="Password"/>
+        </div>
+        <div class="pure-controls">
+          <button type="submit" class="pure-button pure-button-primary">Submit</button>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+  <div class="pure-u-1-5">
+    <p></p>
+  </div>
+</div>
 </body>
 </html>
