--- a/TianyongweiWebsite/src/main/resources/templates/test.html
+++ b/TianyongweiWebsite/src/main/resources/templates/test.html
@@ -26,7 +26,7 @@
           <input id="password" type="password" placeholder="Password"/>
         </div>
         <div class="pure-controls">
-          <button type="submit" class="pure-button pure-button-primary">Submit</button>
+          <button type="submit" class="pure-button pure-button-primary">Submit1</button>
         </div>
       </fieldset>
     </form>
