--- a/TianyongweiWebsite/src/main/resources/templates/test.html
+++ b/TianyongweiWebsite/src/main/resources/templates/test.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="pure-g">
-  <div class="pure-u-2-5">
+  <div class="pure-u-1-5">
     <p></p>
   </div>
   <div class="pure-u-2-5" style="background-color: ;">
@@ -26,7 +26,7 @@
           <input id="password" type="password" placeholder="Password"/>
         </div>
         <div class="pure-controls">
-          <button type="submit" class="pure-button pure-button-primary">Submit1</button>
+          <button type="submit" class="pure-button pure-button-primary">Submit</button>
         </div>
       </fieldset>
     </form>
