--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
 <div class="pure-g">
   <div class="pure-u-1-5">
-    <p>eeee</p>
+    <p></p>
   </div>
   <div class="pure-u-2-5" style="">
     <form class="pure-form pure-form-aligned">
@@ -18,7 +18,7 @@
         <div class="pure-control-group">
           <label for="name">Username</label>
           <input id="name" type="text" placeholder="Username" />
-          <span class="pure-form-message-inline">This is a required field.</span>
+          <!--<span class="pure-form-message-inline">This is a required field.</span>-->
         </div>
 
         <div class="pure-control-group">
