--- a/src/main/resources/templates/subject/add.html
+++ b/src/main/resources/templates/subject/add.html
@@ -21,6 +21,7 @@
 
       .el-main {
         background-color: #E9EEF3;
+        <!--background-color: #fff;-->
         color: #333;
         text-align: center;
         height: 500px;
