turn to "navigation"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
                     <el-header></el-header>
                     <el-main>
                         <el-button type="text">subject</el-button>
-                        <el-button type="text">navigation</el-button>
+                        <el-button type="text">navigation11222</el-button>
                         <el-button type="text">cardsheet</el-button>
                         <el-button type="text">article</el-button>
                     </el-main>
