--- a/src/main/resources/templates/user/找回密码.html
+++ b/src/main/resources/templates/user/找回密码.html
@@ -13,22 +13,21 @@
 <div class="container">
     <div class="row" style="margin-top:150px;">
         <div class="col-md-6 offset-md-3 border rounded">
+            <h5 style="padding:20px;" class="border-bottom">找回密码</h5>
             <form style="padding:20px;">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">邮箱地址</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入邮箱地址...">
-                    <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">密码</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="请输入密码...">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">确认密码</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="请输入确认密码...">
-                </div>
-                <button type="submit" class="btn btn-primary">提交</button>
+              <div class="form-group">
+                <label for="exampleInputEmail1">邮箱地址</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入邮箱地址...">
+                <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+              </div>
+              <button type="submit" class="btn btn-primary">提交</button>
             </form>
+            <div class="alert alert-danger" role="alert">
+              登录失败，xxxx <a href="#" class="alert-link">去验证</a>.
+            </div>
+            <div class="alert alert-primary" role="alert">
+              登录成功，前往邮箱验证： <a href="#" class="alert-link">去验证</a>.
+            </div>
         </div>
     </div>
 </div>
