--- a/src/main/resources/templates/subject/主题导航.html
+++ b/src/main/resources/templates/subject/主题导航.html
@@ -13,20 +13,28 @@
 <body>
 <div class="container">
   <div class="row" style="margin-top:150px;">
-    <div class="col-md-12 offset-md-0 border rounded">
-      <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">主题速查</a>
+    <div class="col-md-6 offset-md-3 border rounded">
+      <nav class="navbar navbar-light">
+        <a class="navbar-brand" href="#">主题导航</a>
       </nav>
 
-      <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-center">
-        <div class="card text-center">
-          <div class="card-header bg-primary text-white border-bottom-0">
-            Building an App
+      <div style="padding-bottom:15px;">
+        <button type="button" class="btn btn-primary btn-sm">Primary <span class="badge badge-light">4</span></button>
+        <button type="button" class="btn btn-primary btn-sm">Primary <span class="badge badge-light">4</span></button>
+        <button type="button" class="btn btn-primary btn-sm">Primary</button>
+        <button type="button" class="btn btn-link">Link</button>
+        <button type="button" class="btn btn-link">Link</button>
+        <button type="button" class="btn btn-link">Link</button>
+        <div class="dropdown">
+          <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown button <span class="badge badge-light">4</span>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
-          <div class="card-body">
-            contentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontentcontent
-          </div><!--cardbody-end-->
-        </div><!--card-end-->
+        </div>
       </div>
     </div>
   </div>
