--- a/src/main/resources/templates/subject/主题-文章-文章列表.html
+++ b/src/main/resources/templates/subject/主题-文章-文章列表.html
@@ -9,30 +9,40 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-  <link href="https://cdn.quilljs.com/1.3.5/quill.snow.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
   <div class="row" style="margin-top:150px;">
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">主题-文章-文章详情-编辑模式</a>
-        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">保存</a>
+        <a class="navbar-brand" href="#">主题-文章-文章列表</a>
+        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">添加文章</a>
       </nav>
+
       <div style="padding-bottom:15px;padding-top:15px;">
-        <div class="row" style="height:50px;">
+        <div class="row">
           <div class="col-md-8 offset-md-2">
-            <input class="form-control form-control-lg rounded-0" type="text" placeholder="输入标题...">
-          </div>
-        </div>
-        <div class="row" style="height:500px;">
-          <div class="col-md-8 offset-md-2">
-            <!--editor-->
-            <div id="editor">
-              <p>Hello World!</p>
-              <p>Some initial <strong>bold</strong> text</p>
-            </div>
-            <!--editor-->
+            <ul class="list-group">
+              <li class="list-group-item">Cras justo odio</li>
+              <li class="list-group-item">Dapibus ac facilisisfacilisisfacilisisfacilisisfacilisisfacilisis in</li>
+              <li class="list-group-item">Morbi leo risus</li>
+              <li class="list-group-item">Porta ac consectetur ac</li>
+              <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+            <br>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                <li class="page-item disabled">
+                  <a class="page-link" href="#" tabindex="-1">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="#">Next</a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
@@ -44,11 +54,8 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="https://cdn.quilljs.com/1.3.5/quill.js"></script>
 <script>
-  var quill = new Quill('#editor', {
-    theme: 'snow'
-  });
+
 </script>
 </body>
 </html>
