首页样式修改

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
       </div>
     </nav>
   </div>
-  <div class="row" style="height:600px">
+  <div class="row" style="min-height:600px">
     <div class="jumbotron col bg-light">
       <h1 class="display-1">你的学习乐园</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -49,26 +49,26 @@
       </p>
     </div>
   </div>
-  <div class="row d-flex justify-content-between">
-    <div class="card bg-warning" style="width: 16rem;">
+  <div class="row d-flex justify-content-around">
+    <div class="card bg-warning col mr-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">导航</p>
       </div>
     </div>
-    <div class="card bg-warning" style="width: 16rem;">
+    <div class="card bg-warning col mx-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">速查</p>
       </div>
     </div>
-    <div class="card bg-warning" style="width: 16rem;">
+    <div class="card bg-warning col mx-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">卡片</p>
       </div>
     </div>
-    <div class="card bg-warning" style="width: 16rem;">
+    <div class="card bg-warning col ml-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">文章</p>
