--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,24 +33,25 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="oi oi-magnifying-glass"></span></button>
+          <button class="btn btn-primary my-2 my-sm-0 ml-1" type="submit">登录</button>
         </form>
       </div>
     </nav>
   </div>
   <div class="row" style="min-height:600px">
     <div class="jumbotron col bg-light">
-      <h1 class="display-1">你的学习乐园</h1>
+      <h1 class="display-2">我们的学习天地</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
       <hr class="my-4">
       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-outline-success btn-lg" href="#" role="button">Learn more</a>
       </p>
     </div>
   </div>
-  <div class="row d-flex justify-content-around">
-    <div class="card bg-warning col mr-1">
+  <div class="row d-flex justify-content-around mb-1">
+    <div class="card bg-warning col mx-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">导航</p>
@@ -68,7 +69,7 @@
         <p class="card-text">卡片</p>
       </div>
     </div>
-    <div class="card bg-warning col ml-1">
+    <div class="card bg-warning col mx-1">
       <!--<img class="card-img-top" src="..." alt="Card image cap">-->
       <div class="card-body">
         <p class="card-text">文章</p>
