--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,8 @@
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="oi oi-magnifying-glass"></span></button>
-          <button class="btn btn-primary my-2 my-sm-0 ml-1" type="submit">登录</button>
+          <button class="btn btn-warning my-2 my-sm-0 ml-1" type="button">登录</button>
+          <button class="btn btn-light my-2 my-sm-0 ml-1" type="button">注册</button>
         </form>
       </div>
     </nav>
