--- a/src/main/resources/templates/subject/add111.html
+++ b/src/main/resources/templates/subject/add111.html
@@ -9,27 +9,32 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+  <link href="https://cdn.quilljs.com/1.3.5/quill.snow.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
   <div class="row" style="margin-top:150px;">
-    <div class="col-md-6 offset-md-3 border rounded">
+    <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">新建主题</a>
+        <a class="navbar-brand" href="#">主题-文章-文章详情-编辑模式</a>
+        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">保存</a>
       </nav>
-
       <div style="padding-bottom:15px;padding-top:15px;">
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">主题名称</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入主题名称...">
+        <div class="row" style="height:50px;">
+          <div class="col-md-8 offset-md-2">
+            <input class="form-control form-control-lg rounded-0" type="text" placeholder="输入标题...">
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">主题简介</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="请输入主题简介...(300字以内)"></textarea>
+        </div>
+        <div class="row" style="height:500px;">
+          <div class="col-md-8 offset-md-2">
+            <!--editor-->
+            <div id="editor">
+              <p>Hello World!</p>
+              <p>Some initial <strong>bold</strong> text</p>
+            </div>
+            <!--editor-->
           </div>
-          <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-        </form>
+        </div>
       </div>
     </div>
   </div>
@@ -39,8 +44,11 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdn.quilljs.com/1.3.5/quill.js"></script>
 <script>
-
+  var quill = new Quill('#editor', {
+    theme: 'snow'
+  });
 </script>
 </body>
 </html>
