--- a/src/main/resources/templates/article/read.html
+++ b/src/main/resources/templates/article/read.html
@@ -16,7 +16,7 @@
     <div class="col-md-12 offset-md-0 border rounded">
       <nav class="navbar navbar-light border-bottom">
         <a class="navbar-brand" href="#">主题-文章-文章详情-只读模式</a>
-        <a href="#" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">编辑</a>
+        <a href="/article/edit" class="btn btn-danger btn-sm d-inline" style="margin-left:20px;">编辑</a>
       </nav>
       <div style="padding-bottom:15px;padding-top:15px;">
         <div class="row">
