--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,37 +17,37 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">LY</a>
+      <a class="navbar-brand" href="/">角落</a>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">首页 <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/subject/list">主题列表</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link disabled" href="#">广场</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="oi oi-magnifying-glass"></span></button>
-          <button class="btn btn-warning my-2 my-sm-0 ml-1" type="button">登录</button>
-          <button class="btn btn-light my-2 my-sm-0 ml-1" type="button">注册</button>
+          <a class="btn btn-warning my-2 my-sm-0 ml-1" href="/user/signin">登录</a>
+          <a class="btn btn-light my-2 my-sm-0 ml-1" href="/user/signup">注册</a>
         </form>
       </div>
     </nav>
   </div>
   <div class="row" style="min-height:600px">
     <div class="jumbotron col bg-light">
-      <h1 class="display-2">我们的学习天地</h1>
+      <h1 class="display-2">我们的学习角落</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
       <hr class="my-4">
       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
       <p class="lead">
-        <a class="btn btn-outline-success btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-outline-success btn-lg" href="#" role="button">新建主题</a>
       </p>
     </div>
   </div>
