--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -16,16 +16,16 @@
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <a class="navbar-brand" href="#">主题列表</a>
-        <a href="#" class="btn btn-danger btn-sm">新建主题</a>
+        <a href="/subject/add" class="btn btn-danger btn-sm">新建主题</a>
       </nav>
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Special title treatment</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary btn-sm">导航</a>
-          <a href="#" class="btn btn-primary btn-sm">速查</a>
-          <a href="#" class="btn btn-primary btn-sm">卡片</a>
-          <a href="#" class="btn btn-primary btn-sm">文章</a>
+          <a href="/nav/read" class="btn btn-primary btn-sm">导航</a>
+          <a href="/cheat/read" class="btn btn-primary btn-sm">速查</a>
+          <a href="/card/read" class="btn btn-primary btn-sm">卡片</a>
+          <a href="/article/read" class="btn btn-primary btn-sm">文章</a>
           <div class="btn-group float-right">
             <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               新增
