--- a/src/main/resources/templates/card/read.html
+++ b/src/main/resources/templates/card/read.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
 </head>
-<body>
+<body class="bg-light">
 <div class="container">
   <div class="row" style="margin-top:150px;">
     <div class="col-md-12 offset-md-0 border rounded">
@@ -25,50 +25,140 @@
         </div>
       </nav>
 
-      <div style="padding-bottom:15px;padding-top:15px;" class="d-flex justify-content-between align-items-top">
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
-            Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">正</a>
-              <a href="#" class="btn btn-warning btn-sm">反</a>
-            </div>
-          </div>
-          <div class="card-body">
+      <div id="app" style="padding-bottom:15px;padding-top:15px;" class="d-flex flex-wrap">
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+            <!--Building an App-->
+            <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+              <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+              <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+            <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
             <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div><!--cardbody-end-->
-          <div class="card-body">
-            <p class="card-text">反面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
           </div><!--cardbody-end-->
         </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
-            Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">正</a>
-              <a href="#" class="btn btn-warning btn-sm">反</a>
-            </div>
-          </div>
-          <div class="card-body">
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
             <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div><!--cardbody-end-->
-          <div class="card-body">
-            <p class="card-text">反面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
           </div><!--cardbody-end-->
         </div><!--card-end-->
-        <div class="card text-center" style="width:360px;">
-          <div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">
-            Building an App
-            <div class="btn-group float-right" role="group" aria-label="Basic example">
-              <a href="#" class="btn btn-warning btn-sm">正</a>
-              <a href="#" class="btn btn-warning btn-sm">反</a>
-            </div>
-          </div>
-          <div class="card-body">
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
             <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div><!--cardbody-end-->
-          <div class="card-body">
-            <p class="card-text">反面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-primary text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
+          </div><!--cardbody-end-->
+        </div><!--card-end-->
+        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+          <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
+          <!--Building an App-->
+          <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
+          <!--<a href="#" class="btn btn-warning btn-sm">正</a>-->
+          <!--<a href="#" class="btn btn-warning btn-sm">反</a>-->
+          <!--</div>-->
+          <!--</div>-->
+          <div class="card-body bg-warning text-white" v-if="show">
+            <p class="card-text">正面：Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div><!--cardbody-end-->
+          <div class="card-body" v-if="!show">
+            <p class="card-text">反面：/* 可以设置不同的进入和离开动画 *//</p>
           </div><!--cardbody-end-->
         </div><!--card-end-->
       </div>
@@ -77,11 +167,17 @@
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
-
+  new Vue({
+    el: '#app',
+    data: {
+      show: true
+    }
+  })
 </script>
 </body>
 </html>
