--- a/src/main/resources/templates/card/read.html
+++ b/src/main/resources/templates/card/read.html
@@ -26,7 +26,7 @@
       </nav>
 
       <div id="app" style="padding-bottom:15px;padding-top:15px;" class="d-flex flex-wrap">
-        <div @click="show = !show" class="card text-center" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
+        <div @click="show = !show" class="card text-center rounded" style="max-width:277px;min-width:277px;max-height:167px;min-height:167px;">
           <!--<div class="card-header bg-primary text-white border-bottom-0 d-flex justify-content-between">-->
             <!--Building an App-->
             <!--<div class="btn-group float-right" role="group" aria-label="Basic example">-->
