--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -10,25 +10,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container" id="app">
     <div class="row" style="margin-top:150px;">
         <div class="col-md-6 offset-md-3 border rounded">
             <h5 style="padding:20px;" class="border-bottom">用户注册</h5>
             <form style="padding:20px;">
                 <div class="form-group">
                     <label for="exampleInputEmail1">邮箱地址</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入邮箱地址...">
+                    <input v-model="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入邮箱地址...">
                     <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">密码</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="请输入密码...">
+                    <input v-model="psd1" type="password" class="form-control" id="exampleInputPassword1" placeholder="请输入密码...">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">确认密码</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="请输入确认密码...">
+                    <input v-model="psd2" type="password" class="form-control" id="exampleInputPassword2" placeholder="请输入确认密码...">
                 </div>
-                <button type="submit" class="btn btn-primary">提交</button>
+                <button v-on:click="commitUser" type="button" class="btn btn-primary">提交</button>
             </form>
           <div class="alert alert-primary" role="alert">
             注册成功，前往邮箱验证： <a href="#" class="alert-link">去验证</a>.
@@ -47,8 +47,42 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.0"></script>
 <script>
-
+var app = new Vue({
+  el: '#app',
+  data: {
+    email: '',
+    psd1:'',
+    psd2:''
+  },
+  methods: {
+    commitUser: function () {
+      this.$http.post('/user/signup', {
+        email:this.email,
+        psd1:this.psd1,
+        psd2:this.psd2
+      }, {emulateJSON: true}).then(response => {
+        console.log(response.body)
+        // get status
+        response.status;
+        // get status text
+        response.statusText;
+        // get 'Expires' header
+        response.headers.get('Expires');
+        // get body data
+        // this.someData = response.body;
+      }, response => {
+        // error callback
+      });
+    },
+    show: function () {
+      console.log(this.email);
+      console.log(this.psd1,this.psd2)
+    }
+  }
+})
 </script>
 </body>
 </html>
