--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -30,15 +30,12 @@
                 </div>
                 <button v-on:click="commitUser" type="button" class="btn btn-primary">提交</button>
             </form>
-          <div class="alert alert-primary" role="alert">
-            注册成功，前往邮箱验证： <a href="#" class="alert-link">去验证</a>.
+          <div class="alert alert-primary" role="alert" v-if="errorShow">
+            注册异常：{{message}}
           </div>
-          <div class="alert alert-danger" role="alert">
-            注册失败，xxxx <a href="#" class="alert-link">去验证</a>.
-          </div>
-          <div class="alert alert-primary" role="alert">
-            注册成功，前往邮箱验证： <a href="#" class="alert-link">去验证</a>.
-          </div>
+            <div class="alert alert-primary" role="alert" v-if="successShow">
+                登录成功，前往邮箱验证： <a v-bind:href="message" class="alert-link">去验证</a>.
+            </div>
         </div>
     </div>
 </div>
@@ -55,7 +52,11 @@ var app = new Vue({
   data: {
     email: '',
     psd1:'',
-    psd2:''
+    psd2:'',
+    errorShow:false,
+    successShow:false,
+    message:'',
+    mailAddress:''
   },
   methods: {
     commitUser: function () {
@@ -64,17 +65,16 @@ var app = new Vue({
         psd1:this.psd1,
         psd2:this.psd2
       }, {emulateJSON: true}).then(response => {
-        console.log(response.body)
-        // get status
-        response.status;
-        // get status text
-        response.statusText;
-        // get 'Expires' header
-        response.headers.get('Expires');
-        // get body data
-        // this.someData = response.body;
+        if(response.body.status) {
+            this.successShow = true;
+            this.message = response.body.msg;
+        } else {
+            this.errorShow = true;
+            this.message = response.body.msg;
+        }
       }, response => {
-        // error callback
+        this.errorShow = true;
+        this.message = '网络异常'
       });
     },
     show: function () {
