注册写完了 终于...

--- a/src/main/resources/templates/user/emailverify.html
+++ b/src/main/resources/templates/user/emailverify.html
@@ -13,8 +13,8 @@
 <div class="container">
     <div class="row" style="margin-top:150px;">
         <div class="col-md-6 offset-md-3 border rounded">
-            <h5 style="padding:20px;" class="border-bottom">用户登陆</h5>
-          <p class="text-justify">验证结果描述，前往<a href="">地址</a></p>
+            <h5 style="padding:20px;" class="border-bottom">邮箱验证结果：</h5>
+          <p class="text-justify" th:text="${message}">message</p>
         </div>
     </div>
 </div>
@@ -23,8 +23,5 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script>
-
-</script>
 </body>
 </html>
