--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
   </div>
   <div class="row" style="min-height:600px">
     <div class="jumbotron col bg-light">
-      <h1 class="display-2">我们的学习角落</h1>
+      <h1 class="display-2">Done is better than perfect.</h1>
       <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
       <hr class="my-4">
       <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
