--- a/src/main/resources/templates/fragment/headTag.html
+++ b/src/main/resources/templates/fragment/headTag.html
@@ -1,9 +1,10 @@
 <head>
-  <title>tyw</title>
+  <title>角落</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="icon" href="img/luotuo.png" type="image/png" />
+  <link rel="shortcut icon" href="img/luotuo.png" type="image/png" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
