--- a/src/main/resources/templates/fragment/headTag.html
+++ b/src/main/resources/templates/fragment/headTag.html
@@ -1,5 +1,5 @@
 <head>
-  <title>角落</title>
+  <title>角落 Corner</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
