登录退出完全写好

--- a/src/main/resources/templates/user/signin.html
+++ b/src/main/resources/templates/user/signin.html
@@ -64,6 +64,7 @@ var app = new Vue({
             this.successShow = true;
             this.errorShow = false;
             this.message = response.body.msg;
+            window.location.href="/";
         } else {
             this.errorShow = true;
             this.successShow = false;
