--- a/src/main/resources/templates/fragment/headTag.html
+++ b/src/main/resources/templates/fragment/headTag.html
@@ -3,8 +3,8 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="img/luotuo.png" type="image/png" />
-  <link rel="shortcut icon" href="img/luotuo.png" type="image/png" />
+  <link rel="icon" href="img/dog.png" type="image/png" />
+  <link rel="shortcut icon" href="img/dog.png" type="image/png" />
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
@@ -15,5 +15,4 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-session@1.0.0"></script>
 </head>
