--- a/src/main/resources/templates/fragment/navbar.html
+++ b/src/main/resources/templates/fragment/navbar.html
@@ -20,63 +20,58 @@
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><span class="oi oi-magnifying-glass"></span></button>
-        <a class="btn btn-warning my-2 my-sm-0 ml-1" href="/user/signin">登录</a>
-        <a class="btn btn-light my-2 my-sm-0 ml-1" href="/user/signup">注册</a>
+        <div v-if="!isLogin">
+          <a class="btn btn-warning my-2 my-sm-0 ml-1" href="/user/signin">登录</a>
+          <a class="btn btn-light my-2 my-sm-0 ml-1" href="/user/signup">注册</a>
+        </div>
       </form>
+      <div class="btn-group ml-1" v-if="isLogin">
+        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{user.username}}
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">{{user.username}}</a>
+          <a class="dropdown-item" href="#">设置</a>
+          <a class="dropdown-item" href="#">个人信息</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" v-on:click="loginout" href="#">安全退出</a>
+        </div>
+      </div>
     </div>
   </nav>
   <script>
     var app = new Vue({
       el: '#navbar',
       data: {
-        email: '',
-        password:'',
-        message:'message123',
-        successShow:false,
-        errorShow:false
+        message:'',
+        isLogin:false,
+        user:''
       },
       created: function () {
-        this.$http.post('/user/info', {
-            id:1
-          }, {emulateJSON: true}).then(response => {
-            console.log(response.body)
-            if(response.body.success) {
+        this.$http.post('/user/checklogin', {
 
-                this.$session.start()
-                this.$session.set('tyw', 'testtest')
-                this.successShow = true;
-                this.errorShow = false;
-                this.message = response.body.msg;
-            } else {
-                this.errorShow = true;
-                this.successShow = false;
-                this.message = response.body.msg;
-            }
-          }, response => {
-            this.errorShow = true;
-            this.successShow = false;
-            this.message = '网络异常'
-          });
+        }, {emulateJSON: true}).then(response => {
+          console.log(response.body)
+          if(response.body.success) {
+              this.isLogin = true;
+              this.user = response.body.obj;
+          } else {
+              this.isLogin = false;
+          }
+        }, response => {
+          this.message = '网络异常'
+        });
       },
       methods: {
-        signinCheck: function () {
-          this.$http.post('/user/signin', {
-            email:this.email,
-            password:this.password
+        loginout : function() {
+          this.$http.post('/user/signout', {
+
           }, {emulateJSON: true}).then(response => {
             console.log(response.body)
             if(response.body.success) {
-                this.successShow = true;
-                this.errorShow = false;
-                this.message = response.body.msg;
-            } else {
-                this.errorShow = true;
-                this.successShow = false;
-                this.message = response.body.msg;
+                window.location.href="/";
             }
           }, response => {
-            this.errorShow = true;
-            this.successShow = false;
             this.message = '网络异常'
           });
         }
