--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,6 +3,7 @@
 <head th:replace="fragment/headTag"></head>
 <body>
 <div class="container">
+  <div th:replace="fragment/navbar"></div>
   <div class="row mt-5">
     <div class="col-md-4 offset-4">
       <div class="card bg-warning">
