专题列表比我想象的复杂

--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -8,67 +8,23 @@
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <a class="navbar-brand" href="#">主题列表</a>
-        <a href="/subject/add" class="btn btn-danger btn-sm">新建主题</a>
+        <a href="/subject/add" class="btn btn-warning btn-sm">新建主题</a>
       </nav>
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Special title treatment</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="/nav/read" class="btn btn-primary btn-sm">导航</a>
-          <a href="/cheat/read" class="btn btn-primary btn-sm">速查</a>
-          <a href="/card/read" class="btn btn-primary btn-sm">卡片</a>
-          <a href="/article/read" class="btn btn-primary btn-sm">文章</a>
+          <a href="/nav/read" class="btn btn-warning btn-sm">导航</a>
+          <a href="/cheat/read" class="btn btn-warning btn-sm">速查</a>
+          <a href="/card/read" class="btn btn-warning btn-sm">卡片</a>
+          <a href="/article/read" class="btn btn-warning btn-sm">文章</a>
           <div class="btn-group float-right">
             <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              新增
+              设置
             </button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">导航</a>
-              <a class="dropdown-item" href="#">速查</a>
-              <a class="dropdown-item" href="#">卡片</a>
-              <a class="dropdown-item" href="#">文章</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary btn-sm">导航</a>
-          <a href="#" class="btn btn-primary btn-sm">速查</a>
-          <a href="#" class="btn btn-primary btn-sm">卡片</a>
-          <a href="#" class="btn btn-primary btn-sm">文章</a>
-          <div class="btn-group float-right">
-            <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              新增
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">导航</a>
-              <a class="dropdown-item" href="#">速查</a>
-              <a class="dropdown-item" href="#">卡片</a>
-              <a class="dropdown-item" href="#">文章</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary btn-sm">导航</a>
-          <a href="#" class="btn btn-primary btn-sm">速查</a>
-          <a href="#" class="btn btn-primary btn-sm">卡片</a>
-          <a href="#" class="btn btn-primary btn-sm">文章</a>
-          <div class="btn-group float-right">
-            <button type="button" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              新增
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">导航</a>
-              <a class="dropdown-item" href="#">速查</a>
-              <a class="dropdown-item" href="#">卡片</a>
-              <a class="dropdown-item" href="#">文章</a>
+              <a class="dropdown-item" href="#">删除</a>
+              <a class="dropdown-item" href="#">编辑</a>
             </div>
           </div>
         </div>
@@ -93,7 +49,36 @@
   </div>
 </div>
 <script>
-
+var app = new Vue({
+  el: '#app',
+  data: {
+    page: 1,
+    pageSize: 10,
+    pageAll:'',
+    message:'',
+    messageShow:false
+  },
+  methods: {
+    page: function () {
+      this.$http.post('/subject/list', {
+        page:this.page
+      }, {emulateJSON: true}).then(response => {
+        console.log(response.body)
+        if(response.body.success) {
+            this.messageShow = true;
+            this.message = response.body.msg;
+        } else {
+            this.messageShow = true;
+            this.message = response.body.msg;
+        }
+      }, response => {
+        this.errorShow = true;
+        this.successShow = false;
+        this.message = '网络异常'
+      });
+    }
+  }
+})
 </script>
 </body>
 </html>
