主题列表分页卡壳..

--- a/src/main/resources/templates/subject/add.html
+++ b/src/main/resources/templates/subject/add.html
@@ -11,7 +11,7 @@
       </nav>
 
       <div style="padding-bottom:15px;padding-top:15px;">
-        <form>
+        <form onsubmit="return false;">
           <div class="form-group">
             <label for="exampleInputEmail1">主题名称</label>
             <input v-model="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="请输入主题名称...">
