--- a/src/main/resources/templates/subject/list.html
+++ b/src/main/resources/templates/subject/list.html
@@ -4,16 +4,19 @@
 <body>
 <div class="container">
   <div th:replace="fragment/navbar"></div>
-  <div class="row" style="margin-top:150px;">
+  <div class="row" id="app" style="margin-top:150px;">
     <div class="col-md-6 offset-md-3 border rounded">
       <nav class="navbar navbar-light">
         <a class="navbar-brand" href="#">主题列表</a>
         <a href="/subject/add" class="btn btn-warning btn-sm">新建主题</a>
       </nav>
-      <div class="card">
+      <div v-if="subjects.content == 0">
+        暂无专题
+      </div>
+      <div class="card" v-for="subject in subjects.content">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">{{subject.name}}</h5>
+          <p class="card-text">{{subject.intro}}</p>
           <a href="/nav/read" class="btn btn-warning btn-sm">导航</a>
           <a href="/cheat/read" class="btn btn-warning btn-sm">速查</a>
           <a href="/card/read" class="btn btn-warning btn-sm">卡片</a>
@@ -23,13 +26,65 @@
               设置
             </button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#delModal">删除</a>
-              <a class="dropdown-item" href="#">编辑</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#delModal'+subject.id">删除</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" :data-target="'#editModal'+subject.id">编辑</a>
             </div>
           </div>
         </div>
+        <!--模态框-->
+        <!-- Modal -->
+        <div class="modal" :id="'delModal' + subject.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">删除专题</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                确定删除该专题吗？
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary btn-sm" @click="delSubject(subject)">确定</button>
+              </div>
+            </div>
+          </div>
+        </div><!-- Modal -->
+        <!-- Modal -->
+        <div class="modal fade" :id="'editModal' + subject.id" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="">编辑专题</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="form-group">
+                    <label for="recipient-name" class="col-form-label">专题名称:</label>
+                    <input type="text" class="form-control" id="recipient-name" :value="subject.name">
+                  </div>
+                  <div class="form-group">
+                    <label for="message-text" class="col-form-label">专题简介:</label>
+                    <textarea class="form-control" id="message-text" :value="subject.intro"></textarea>
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary btn-sm" @click="saveEdit(subject.id)">保存</button>
+              </div>
+            </div>
+          </div>
+        </div><!-- Modal -->
+        <!--模态框-->
       </div>
       <br>
+      <!--分也开始-->
       <nav aria-label="...">
         <ul class="pagination pagination-sm">
           <li class="page-item disabled">
@@ -44,53 +99,9 @@
             <a class="page-link" href="#">Next</a>
           </li>
         </ul>
-      </nav>
+      </nav><!--分页结束-->
 
-      <!-- Button trigger modal -->
-      <!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#delModal">-->
-        <!--Launch demo modal-->
-      <!--</button>-->
 
-      <!-- Modal -->
-      <div class="modal" id="delModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              确定删除该专题吗？
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary" v-on:click="delSubject">确定</button>
-            </div>
-          </div>
-        </div>
-      </div><!-- Modal -->
-      <!-- Modal -->
-      <div class="modal" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog  modal-dialog-centered modal-sm" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              确定删除该专题吗？Varying modal content-用这个
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-              <button type="button" class="btn btn-primary" v-on:click="delSubject">确定</button>
-            </div>
-          </div>
-        </div>
-      </div><!-- Modal -->
     </div>
   </div>
 </div>
@@ -98,11 +109,31 @@
 var app = new Vue({
   el: '#app',
   data: {
+    subjects:{},
     page: 1,
-    pageSize: 10,
+    size: 10,
     pageAll:'',
     message:'',
     messageShow:false
+  },
+  created: function() {
+      this.$http.post('/subject/list', {
+          page:this.page,
+          size:this.size
+      }, {emulateJSON: true}).then(response => {
+          console.log(response.body)
+          if(response.body.success) {
+              this.subjects = response.body.obj;
+              this.messageShow = true;
+              this.message = response.body.msg;
+          } else {
+              this.messageShow = true;
+              this.message = response.body.msg;
+          }
+      }, response => {
+          this.messageShow = true;
+          this.message = '网络异常'
+      });
   },
   methods: {
     page: function () {
@@ -122,6 +153,29 @@ var app = new Vue({
         this.successShow = false;
         this.message = '网络异常'
       });
+    },
+    delSubject: function (subject) {
+        this.$http.post('/subject/del', {
+            id: subject.id
+        }, {emulateJSON: true}).then(response => {
+            console.log(response.body)
+            if(response.body.success) {
+                this.messageShow = true;
+                this.message = response.body.msg;
+                $('#delModal'+subject.id).modal('hide');
+                var index = this.subjects.indexOf(subject);
+                if (index !== -1) this.subjects.splice(index, 1);
+                $('.alert').show();
+                $('.alert').alert();
+            } else {
+                this.messageShow = true;
+                this.message = response.body.msg;
+            }
+        }, response => {
+            this.errorShow = true;
+            this.successShow = false;
+            this.message = '网络异常'
+        });
     }
   }
 })
