--- a/src/main/resources/templates/article/read.html
+++ b/src/main/resources/templates/article/read.html
@@ -13,13 +13,12 @@
       <div style="padding-bottom:15px;padding-top:15px;">
         <div class="row">
           <div class="col-md-8 offset-md-2">
-            <h2 style="padding-bottom:10px;" class="border-bottom">AlphaGo Zero 和强人工智能</h2>
-            <p class="text-justify">
-              有些人虽然支持我，可是他们误解了我写书的目的。他们说我写书是要“证明自己”或者“实现自己的价值”，我觉得这些都是有失尊重的说法。他们说那些话的原因，是因为他们自己的觉悟没到位，所以没能理解我的境界和地位。只有地位低的人才需要向别人证明自己，才需要拿“硅谷”，“Google”一类的招牌来撑起自己的自信，才需要写一些“硅谷回忆录”来让别人瞧得起自己。我不一样的。由于我的地位，世界上没有任何人有资格来接受我的“证明”，所以我不需要向任何人证明自己，当然我更不需要向那些说我闲话的人，被洗脑的蠢人证明自己。
-            </p>
-            <p class="text-justify">
-              有些人虽然支持我，可是他们误解了我写书的目的。他们说我写书是要“证明自己”或者“实现自己的价值”，我觉得这些都是有失尊重的说法。他们说那些话的原因，是因为他们自己的觉悟没到位，所以没能理解我的境界和地位。只有地位低的人才需要向别人证明自己，才需要拿“硅谷”，“Google”一类的招牌来撑起自己的自信，才需要写一些“硅谷回忆录”来让别人瞧得起自己。我不一样的。由于我的地位，世界上没有任何人有资格来接受我的“证明”，所以我不需要向任何人证明自己，当然我更不需要向那些说我闲话的人，被洗脑的蠢人证明自己。
-            </p>
+            <h2 style="padding-bottom:10px;color: #666666;font-family: Palatino Linotype, Book Antiqua, Palatino, Helvetica, STKaiti, SimSun, serif;" class="border-bottom">AlphaGo Zero 和强人工智能</h2>
+            <div class="zhengwen mt-5">
+              <p class="text-justify"  style="font-size: 18px;line-height: 1.8;font-family: lucida grande, lucida sans unicode, lucida, helvetica, Hiragino Sans GB, Microsoft YaHei,WenQuanYi Micro Hei, sans-serif;, Arial, Helvetica, sans-serif ,simsun">
+                有些人虽然支持我，可是他们误解了我写书的目的。他们说我写书是要“证明自己”或者“实现自己的价值”，我觉得这些都是有失尊重的说法。他们说那些话的原因，是因为他们自己的觉悟没到位，所以没能理解我的境界和地位。只有地位低的人才需要向别人证明自己，才需要拿“硅谷”，“Google”一类的招牌来撑起自己的自信，才需要写一些“硅谷回忆录”来让别人瞧得起自己。我不一样的。由于我的地位，世界上没有任何人有资格来接受我的“证明”，所以我不需要向任何人证明自己，当然我更不需要向那些说我闲话的人，被洗脑的蠢人证明自己。
+              </p>
+            </div>
           </div>
         </div>
       </div>
